# bedrock-ragas-poc

./: .gitignore  README.md  main.ipynb  pyproject.toml
data/: data.json
src/: eval.py  eval_multiple_choice.py  generate_answers.py  main.ipynb  multiple_choice_questions.json  open_ended_questions.json
