[tool.poetry]
name = "bedrock-ragas-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ragas = "^0.1.0"
boto3 = "^1.34.37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"